Updates to Helidon Common, Part 1 (#4693)
* Switch to System.Logger for common modules (except for reactive)
* Move HelidonServiceLoader to common module.
* GenericType now contains constant for String
* Typo fix (Builder)
* Using Weight instead of Priority in SE